# text-classfier

./: README.md  pyproject.toml  text-classifer.ipynb
