[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["will-ing <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.0"
pandas = "^1.0.5"
matplotlib = "^3.3.0"
pylint = "^2.5.3"
sklearn = "^0.0"
tensorflow = "^2.2.0"
keras = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
